@@ -2,6 +2,9 @@ library("R.utils");
 library("aroma.light");
 
 
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+# Load data
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 pathname <- system.file("data-ex/pcCBS,exData,chr01.Rbin", package="psCBS");
 data <- R.utils::loadObject(pathname);
 
@@ -16,6 +19,11 @@ str(data);
 R.oo::attachLocally(data);
 x <- position;
 
+
+
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+# Paired PSCBS segmentation
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 # Drop single-locus outliers
 CTs <- dropSegmentationOutliers(CT, chromosome=1, x=x, verbose=-10);
 
@@ -27,28 +35,50 @@ print(fit);
 # Plot results
 plotTracks(fit);
 
-# Estimate the below tauAB tuning parameter for call AB regions
-tauAB <- estimateTauAB(fit, scale=2);
-print(tauAB);
-## [1] 0.1354
 
-# Estimate "normal contamination"
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+# Bootstrap segment level estimates
+# (used by the AB caller)
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+fit <- bootstrapTCNandDHByRegion(fit, verbose=-10);
+print(fit);
+plotTracks(fit);
+
+
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+# Calling segments in allelic balance (AB)
+# NOTE: Ideally, this should be done on whole-genome data
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+# Explicitly estimate the threshold in DH for calling AB
+tauAB <- estimateTauAB(fit, flavor="qq(DH)", verbose=-10);
+print(tauAB);
+## [1] 
+
+fit <- callAB(fit, tau=tauAB, flavor="DeltaAB*", verbose=-10);
+print(fit);
+plotTracks(fit);
+
+
+
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+# Calling segments in loss-of-heterozygosity (LOH)
+# NOTE: Ideally, this should be done on whole-genome data
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+# Explicitly estimate the threshold in C1 for calling LOH
+tauLOH <- estimateTauLOH(fit, flavor="minC1|nonAB*", verbose=-10);
+print(tauLOH);
+## [1] 
+
+fit <- callLOH(fit, tau=tauLOH, flavor="SmallC1", verbose=-10);
+print(fit);
+plotTracks(fit);
+
+
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+# Estimate background signals
+# NOTE: Ideally, this should be done on whole-genome data
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 kappa <- estimateKappa(fit);
 print(kappa);
-## [1] 0.2179
+## [1] ...
 
-fit2 <- bootstrapTCNandDHByRegion(fit, verbose=-10);
-print(fit2);
-plotTracks(fit2);
-
-fit3 <- callABandHighAI(fit2, tauAB=tauAB, verbose=-10);
-print(fit3);
-plotTracks(fit3);
-
-
-## # Call allelic balance and extreme allelic imbalance ("LOH")
-## cfit <- callABandHighAI(fit, tauAB=0.10, alphaAB=0.05,
-##                   tauHighAI=0.60, alphaHighAI=0.05, verbose=-10);
-## 
-## # Display segmentation and calls
-## print(fit);
